--- a/coffee_project/src/main/resources/templates/login.html
+++ b/coffee_project/src/main/resources/templates/login.html
@@ -75,7 +75,7 @@
                                     </label>
                                 </div>
                                 <div class="w-50 text-md-right">
-                                    <a href="#">Quên mật khẩu</a>
+                                    <a href="/account/forgot-password">Quên mật khẩu</a>
                                 </div>
                             </div>
                         </form>
