[COFFEE][NHAT][USER]update validate and unique attribute

--- a/coffee_project/src/main/resources/templates/user/create.html
+++ b/coffee_project/src/main/resources/templates/user/create.html
@@ -81,7 +81,7 @@
                 <div class="row d-flex ">
                     <div class="col-4">
                         <div id="dnd" class="preview" style="margin-top: 5px">
-
+                            <img id="img" src="" class="preview-img"/>
                         </div>
                         <div class="d-flex justify-content-center">
                             <div>
@@ -181,39 +181,6 @@
                                 </td>
                             </tr>
 
-                            <!--                            <tr>-->
-                            <!--                                <th>Lương <span style="color: red">*</span>-->
-                            <!--                                    <div style=" height: 20px"></div>-->
-                            <!--                                </th>-->
-                            <!--                                <td><input class="form-control" th:field="*{userSalary}" type="number">-->
-                            <!--                                    <div style=" height: 20px"><small style="color: red"-->
-                            <!--                                                                      th:if="${#fields.hasErrors('userSalary')}"-->
-                            <!--                                                                      th:errors="*{userSalary}"></small></div>-->
-                            <!--                                </td>-->
-                            <!--                            </tr>-->
-
-                            <!--                            <tr>-->
-                            <!--                                <th>Ca làm việc <span style="color: red">*</span>-->
-                            <!--                                    <div style=" height: 20px"></div>-->
-                            <!--                                </th>-->
-                            <!--                                <td><select id="disabledSelect" class="form-select" th:field="*{employeeType}">-->
-                            <!--                                    <option th:each="employeeType :${employeeTypeList}"-->
-                            <!--                                            th:value="${employeeType.employeeTypeId}"-->
-                            <!--                                            th:text="${employeeType.employeeTypeName}"></option>-->
-                            <!--                                </select>-->
-                            <!--                                    <div style=" height: 20px"></div>-->
-                            <!--                                </td>-->
-                            <!--                            </tr>-->
-                            <!--                            <tr>-->
-                            <!--                                <th>Tài khoản <span style="color: red">*</span>-->
-                            <!--                                    <div style=" height: 20px"></div>-->
-                            <!--                                </th>-->
-                            <!--                                <td><input class="form-control"  th:field="*{account.accountName}">-->
-                            <!--                                    <div style=" height: 20px"><small style="color: red"-->
-                            <!--                                                                      th:if="${#fields.hasErrors('userAddress')}"-->
-                            <!--                                                                      th:errors="*{userAddress}"></small></div>-->
-                            <!--                                </td>-->
-                            <!--                            </tr>-->
                             <tr>
 
                                 <td colspan="2">
@@ -238,15 +205,18 @@
         src="../static/bootstrap-5.0.2-dist/js/bootstrap.bundle.js"></script>
 
 
-
 <!--                    //file Js Img-->
 <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-analytics.js"></script>
 <script type="module">
 
-    // import { initializeApp } from "https://www.gstatic.com/firebasejs/10.1.0/firebase-app.js";
+    function renderBaseImg() {
+        let path = document.getElementById("thumbnailURL").value;
+        document.getElementById("img").src = path;
+        document.getElementById("img").alt = "img";
+    }
 
-
+    renderBaseImg();
     const dndElement = document.querySelector('#dnd')
     const resultElement = document.querySelector('.preview')
     const validImageTypes = ['image/gif', 'image/jpeg', 'image/png']
@@ -279,7 +249,9 @@
         fileReader.readAsDataURL(file)
         fileReader.onload = function () {
             const url = fileReader.result;
-            resultElement.innerHTML = `<img src="${url}" alt="${file.name}" class="preview-img" />`;
+            // resultElement.innerHTML = `<img src="${url}" alt="${file.name}" class="preview-img" />`;
+            document.getElementById("img").src = url;
+            document.getElementById("img").alt = file.name;
             pushImage(file)
         }
     }
@@ -299,7 +271,7 @@
 
     function pushImage(file) {
         let random = Math.random().toString(36).substring(7);
-        let storageRef = firebase.storage().ref(random);
+        let storageRef = firebase.storage().ref("user/"+random);
         let task = storageRef.put(file);
         task.on('state_changed', function progress(snapshot) {
             let percentage = (snapshot.bytesTransferred / snapshot.totalBytes) * 100;
