--- a/coffee_project/src/main/resources/templates/user/update.html
+++ b/coffee_project/src/main/resources/templates/user/update.html
@@ -82,7 +82,7 @@
                 <div class="row d-flex ">
                     <div class="col-4">
                         <div id="dnd" class="preview" style="margin-top: 5px">
-
+                            <img id="img" src="" class="preview-img"/>
                         </div>
                         <div class="d-flex justify-content-center">
                             <div>
@@ -91,7 +91,8 @@
                             </div>
                         </div>
                     </div>
-                        <!--                    //Table đăng kí thông tin-->
+                    <!--                    //Table đăng kí thông tin-->
+                    <input id="thumbnailURL" hidden="hidden" th:field="*{userImagePath}">
                     <input hidden="hidden" th:field="*{userId}">
                     <input hidden="hidden" th:field="*{account}">
                     <input hidden="hidden" th:field="*{employeeType}">
@@ -182,19 +183,6 @@
                                     </div>
                                 </td>
                             </tr>
-<!--                            <tr>-->
-<!--                                <th>Lương <span style="color: red">*</span>-->
-<!--                                    <div style=" height: 20px"></div>-->
-<!--                                </th>-->
-<!--                                <td>-->
-<!--                                    <input class="form-control" th:field="*{userSalary}" type="number"-->
-<!--                                           id="salary">-->
-<!--                                    <div style=" height: 20px">-->
-<!--                                        <small style="color: red" th:if="${#fields.hasErrors('userSalary')}"-->
-<!--                                               th:errors="*{userSalary}"></small>-->
-<!--                                    </div>-->
-<!--                                </td>-->
-<!--                            </tr>-->
 
                             <tr>
                                 <th>Địa chỉ <span style="color: red">*</span>
@@ -208,18 +196,6 @@
                                 </td>
                             </tr>
 
-<!--                            <tr>-->
-<!--                                <th>Ca làm việc <span style="color: red">*</span>-->
-<!--                                    <div style=" height: 20px"></div>-->
-<!--                                </th>-->
-<!--                                <td><select class="form-select" th:field="*{employeeType}">-->
-<!--                                    <option th:each="employeeType :${employeeTypeList}"-->
-<!--                                            th:value="${employeeType.employeeTypeId}"-->
-<!--                                            th:text="${employeeType.employeeTypeName}"></option>-->
-<!--                                </select>-->
-<!--                                    <div style=" height: 20px"></div>-->
-<!--                                </td>-->
-<!--                            </tr>-->
                             <tr>
 
                                 <td colspan="2">
@@ -248,60 +224,95 @@
         src="../static/bootstrap-5.0.2-dist/js/bootstrap.bundle.js"></script>
 
 
-
 <!--                    //file Js Img-->
-<script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-storage.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.7.0/firebase.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-analytics.js"></script>
 <script>
-    formatSalary()
+    // formatSalary()
+    //
+    // function formatSalary() {
+    //     let salary = +document.getElementById("salary").value;
+    //     document.getElementById("salary").value = Math.round(salary);
+    // }
 
-    function formatSalary() {
-        let salary = +document.getElementById("salary").value;
-        document.getElementById("salary").value = Math.round(salary);
-    }
 
     const dndElement = document.querySelector('#dnd')
     const resultElement = document.querySelector('.preview')
     const validImageTypes = ['image/gif', 'image/jpeg', 'image/png']
 
+    function renderBaseImg() {
+        let path = document.getElementById("thumbnailURL").value;
+        document.getElementById("img").src = path;
+        document.getElementById("img").alt = "img";
+    }
+
+    renderBaseImg();
     dndElement.addEventListener('dragover', function (e) {
         e.preventDefault()
         this.classList.add('drag-over')
     })
-
     dndElement.addEventListener('dragleave', function (e) {
         e.preventDefault()
         this.classList.remove('drag-over')
     })
-
     dndElement.addEventListener('drop', function (e) {
         e.preventDefault()
         this.classList.remove('drag-over')
         const files = e.dataTransfer.files;
-        for (let i = 0; i < files.length; i++) {
-            const file = files[i]
-            renderPreviewImage(file)
-        }
+        const file = files[0];
+        renderPreviewImage(file)
     })
 
     function renderPreviewImage(file) {
         const fileType = file['type']
-
         if (!validImageTypes.includes(fileType)) {
-            resultElement.insertAdjacentHTML(
-                'beforeend',
+            resultElement.insertAdjacentHTML('beforeend',
                 '<span class="preview-img">Chọn ảnh đi :3</span>'
             )
             return
         }
-
         const fileReader = new FileReader()
         fileReader.readAsDataURL(file)
-
         fileReader.onload = function () {
-            const url = fileReader.result
-            resultElement.innerHTML = `<img src="${url}" alt="${file.name}" class="preview-img" />`
+            const url = fileReader.result;
+            document.getElementById("img").src = url;
+            document.getElementById("img").alt = file.name;
+            pushImage(file)
         }
+    }
+
+
+    // Your web app's Firebase configuration
+    const firebaseConfig = {
+        apiKey: "AIzaSyAzFisiEuPoL-tzq3kdo3faLimcBYOyKf4",
+        authDomain: "coffee-team2-project.firebaseapp.com",
+        projectId: "coffee-team2-project",
+        storageBucket: "coffee-team2-project.appspot.com",
+        messagingSenderId: "18924172599",
+        appId: "1:18924172599:web:d27940351fb0cafc0516b2"
+    };
+
+    firebase.initializeApp(firebaseConfig);
+
+    function pushImage(file) {
+        let random = Math.random().toString(36).substring(7);
+        let storageRef = firebase.storage().ref("user/"+random);
+        let task = storageRef.put(file);
+        task.on('state_changed', function progress(snapshot) {
+            let percentage = (snapshot.bytesTransferred / snapshot.totalBytes) * 100;
+            uploader.value = percentage;
+            //  lúc chưa load xong thì thì ko cho submit
+            if (percentage === 100) {
+                document.getElementById('submit').removeAttribute('disabled');
+            } else {
+                document.getElementById('submit').setAttribute('disabled', 'disabled');
+            }
+        });
+        //   getDownloadURL() để lấy URL của file đã được lưu trữ trên Firebase Storage.
+        task.then(snapshot => snapshot.ref.getDownloadURL())
+            .then(url => {
+                document.getElementById('thumbnailURL').value = url;
+            });
     }
 
 </script>
