--- a/coffee_project/src/main/resources/templates/customer/list.html
+++ b/coffee_project/src/main/resources/templates/customer/list.html
@@ -63,11 +63,11 @@
                     </form>
                 </div>
             </nav>
+            <!-- Hiển thị thông báo-->
             <div th:if="${message!=null}" class="toast p-0" id="myToast" role="alert"
                  aria-live="assertive" aria-atomic="true">
-                <div style="margin-left: 20px"
-                     class="toast-header d-flex justify-content-between bg-success text-dark">
-                    <span><strong th:text="${message}"></strong></span></button>
+                <div class="toast-header d-flex justify-content-between bg-success text-dark">
+                    <span><strong th:text="${message}"></strong></span>
                 </div>
             </div>
             <!--    Hiển thị danh sách-->
