--- a/coffee_project/src/main/resources/templates/customer/create.html
+++ b/coffee_project/src/main/resources/templates/customer/create.html
@@ -29,7 +29,7 @@
             <div class="form">
                 <form class="form-group" th:action="@{/customer/save}" th:object="${customerDto}" method="post">
                     <fieldset>
-                        <legend style="text-align: center"><h1><b>Đăng ký khách hàng</b></h1></legend>
+                        <legend style="text-align: center; margin-top: 2rem"><h1><b>Đăng ký khách hàng</b></h1></legend>
                         <div class="table">
                             <table class="table table-hover">
                                 <tr>
