--- a/coffee_project/src/main/resources/templates/customer/list.html
+++ b/coffee_project/src/main/resources/templates/customer/list.html
@@ -11,7 +11,6 @@
         body {
             font-family: "Source Code Pro";
         }
-
         #next {
             font-size: 1em;
             color: #333;
@@ -42,7 +41,7 @@
     <div class="row">
         <div th:replace="layout::content1"></div>
         <div class="col-sm-10" style="background-color: #FEFAE0;min-height: 700px">
-            <h1 style="text-align: center"><b>Danh sách khách hàng</b></h1>
+            <h1 style="text-align: center; margin-top: 2rem"><b>Danh sách khách hàng</b></h1>
             <!--    Thanh công cụ-->
             <nav class="navbar navbar-inverse">
                 <div class="container-fluid">
@@ -71,7 +70,7 @@
                 </div>
             </div>
             <!--    Hiển thị danh sách-->
-            <div class="table-responsive">
+            <div th:if="${!customerPage.isEmpty()}" class="table-responsive">
                 <table class="table table-hover">
                     <thead>
                     <tr>
