tín[coffee][product] update lại view

--- a/coffee_project/src/main/resources/templates/product/edit.html
+++ b/coffee_project/src/main/resources/templates/product/edit.html
@@ -45,7 +45,7 @@
     <div class="row">
         <div th:replace="layout::content1"></div>
         <div class="col-sm-10" style="background-color: #FEFAE0;min-height: 700px">
-            <h1 style="text-align: center">Cập nhật sản phẩm </h1>
+            <h1 style="text-align: center">Cập Nhật Sản Phẩm </h1>
             <form action="/product/edit" method="post" th:object="${product}">
                 <div class="container">
                     <form action="/product/edit" method="post" th:object="${product}">
