--- a/coffee_project/src/main/resources/templates/product/list.html
+++ b/coffee_project/src/main/resources/templates/product/list.html
@@ -121,7 +121,7 @@
     <div class="row">
         <div th:replace="layout::content1"></div>
         <div class="col-sm-10" style="background-color: #FEFAE0;min-height: 700px">
-            <h1 style="text-align: center">Quản lý sản phẩm</h1>
+            <h1 style="text-align: center">Quản Lý Sản Phẩm</h1>
             <span th:if="${msg}!=null" th:text="${msg}" id="success"
                   class="tin"
                   style="float: left; background-color: rgba(97,139,234,0.87);font-size: 20px"></span>
