--- a/coffee_project/src/main/resources/templates/product/create.html
+++ b/coffee_project/src/main/resources/templates/product/create.html
@@ -45,7 +45,7 @@
     <div class="row">
         <div th:replace="layout::content1"></div>
         <div class="col-sm-10" style="background-color: #FEFAE0; min-height: 700px">
-            <h1 style="text-align: center">Thêm mới sản phẩm</h1>
+            <h1 style="text-align: center">Thêm Mới Sản Phẩm</h1>
             <div class="container">
                     <form action="/product/create" method="post" th:object="${product}">
                         <div style="display: inline-flex;">
