--- a/coffee_project/src/main/resources/templates/customer/view.html
+++ b/coffee_project/src/main/resources/templates/customer/view.html
@@ -22,7 +22,7 @@
         <div th:replace="layout::content1"></div>
         <div class="col-sm-10" style="background-color: #FEFAE0;min-height: 700px">
             <div class="detail">
-                <div style="text-align: center; margin-top: 2rem"><h1><b>Thông tin khách hàng</b></h1></div>
+                <div style="text-align: center; margin-top: 2rem"><h1><b>Thông Tin Khách Hàng</b></h1></div>
                 <div class="table" style="text-align: center;display: flex;justify-content: center; margin-top: 2rem">
                     <table class="table table-hover" style="width: 60%">
                         <tr>
