--- a/coffee_project/src/main/resources/templates/account/list-account.html
+++ b/coffee_project/src/main/resources/templates/account/list-account.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Bootstrap 5 Website Example</title>
+    <title>Quản Lý Tài Khoản</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -28,7 +28,7 @@
         <div th:replace="~{layout::content1}">
         </div>
         <div class="col-sm-10" style="background-color: #FEFAE0;min-height: 700px">
-            <h1 style="text-align: center">Danh sách tài khoản</h1>
+            <h1 style="text-align: center">Quản Lý Tài Khoản</h1>
             <div class="row col-12">
                 <!--            <p style="color: green" th:if="${message!=null}" th:text="${message}" ></p>-->
                 <div class="row col-3 d-flex">
