--- a/coffee_project/src/main/resources/templates/login.html
+++ b/coffee_project/src/main/resources/templates/login.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Login 04</title>
+    <title>Đăng Nhập</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
