--- a/coffee_project/src/main/resources/templates/user/list.html
+++ b/coffee_project/src/main/resources/templates/user/list.html
@@ -25,17 +25,17 @@
         <div class="col-sm-10" style="background-color: #FEFAE0;min-height: 700px">
 
             <!-----------------------//CODE------------------------------------------------------------>
-            <h1 style="text-align: center; margin-bottom: 20px">Danh Sách Nhân Viên</h1>
+            <h1 style="text-align: center; margin-bottom: 20px">Quản Lý Nhân Viên</h1>
 
             <div class="justify-content-center" style="margin-bottom: 20px">
 
                 <div class="row">
                     <div class="col-1">
 
-                        <a style="text-decoration: none" href="/user/create-form">
-                            <button title="Thêm mới sản phẩm"
+                        <a style="text-decoration: none" href="/order/">
+                            <button title="Quay lại"
                                     class="btn btn-primary">
-                                <i class="fa-solid fa-plus"></i></button>
+                                <i class="fa-solid fa-circle-arrow-left"></i></button>
                         </a>
 
                     </div>
