--- a/coffee_project/src/main/resources/templates/user/update.html
+++ b/coffee_project/src/main/resources/templates/user/update.html
@@ -67,13 +67,14 @@
             <!-------------------------CODE--------------------------------------------------------------------------------->
 
             <div class="row" style="margin-top: 15px;margin-bottom: 20px">
-                <h1 class="col-10" style="text-align: center">Thay Đổi Thông Tin Nhân Viên</h1>
 
-                <a th:href="@{/user/list}" style="text-decoration: none"
-                   class="col-2 d-flex justify-content-center">
-                    <button class="btn btn-primary "><i class="fa-solid fa-circle-arrow-left"></i></button>
+                <a class="col-1 mt-2" style="text-decoration: none" href="/order/">
+                    <button title="Quay lại"
+                            class="btn btn-primary">
+                        <i class="fa-solid fa-circle-arrow-left"></i></button>
                 </a>
-
+                <h1 class="col-11" style="text-align: center">
+                    Thay Đổi Thông Tin Nhân Viên</h1>
             </div>
             <form th:object="${userDto}" method="post" th:action="@{/user/update}">
 
@@ -98,7 +99,7 @@
                     <input hidden="hidden" th:field="*{employeeType}">
                     <input hidden="hidden" th:field="*{userSalary}">
                     <div class="col-8" id="form-create">
-                        <table class="table-responsive" style="width: 70%">
+                        <table class="table table-responsive table-hover" style="width: 70%">
 
                             <tr>
                                 <th>Tên nhân viên <span style="color: red">*</span>
@@ -296,7 +297,7 @@
 
     function pushImage(file) {
         let random = Math.random().toString(36).substring(7);
-        let storageRef = firebase.storage().ref("user/"+random);
+        let storageRef = firebase.storage().ref("user/" + random);
         let task = storageRef.put(file);
         task.on('state_changed', function progress(snapshot) {
             let percentage = (snapshot.bytesTransferred / snapshot.totalBytes) * 100;
